--- a/templates/twmtg_card_frag.html
+++ b/templates/twmtg_card_frag.html
@@ -1,6 +1,6 @@
 <div>
     <hr/>
-    <h2><i>Twenty-words</i> ruling:</h2>
+    <h2>Ruling:</h2>
     
     <h3>
     {{#TMPL_legal}}
@@ -10,7 +10,7 @@
     <span style="color: red; font-variant: small-caps; text-shadow: 0px 0px 25px rgb(215, 90, 90);">Illegal</span>
     {{/TMPL_legal}}
     </h3>
-    
+
     <div>Number of words: {{ num_words }}</div>
 
     <hr/>
