--- a/templates/twmtg_card_frag.html
+++ b/templates/twmtg_card_frag.html
@@ -23,11 +23,13 @@
         {{{ legality_checked_text }}}
     </div>
     
-    Full text:
-    <div class="cardText"
-        style="margin: 1em; padding: 1em; border: 1px solid rgb(85, 45, 45); border-radius: 0.2em; background-color: rgb(220, 223, 255)">
-        {{{ text }}}
-    </div>
+    <details style="margin-bottom: 1vh;">
+        <summary>Full text:</summary>
+        <div class="cardText"
+            style="margin: 1em; padding: 1em; border: 1px solid rgb(85, 45, 45); border-radius: 0.2em; background-color: rgb(220, 223, 255)">
+            {{{ text }}}
+        </div>
+    </details>
 
     <div style="font-size: 80%;">
         Printings:
