--- a/templates/twmtg_card_meta_frag.html
+++ b/templates/twmtg_card_meta_frag.html
@@ -1,6 +1,6 @@
-<p>Ruleset version <code>{{ ruleset_ver }}</code></p>
+<p>Ruleset version <code>{{ ruleset_ver }}</code>.</p>
 <p>
     <a href="https://mtgjson.com/" target="_blank">Base</a>
     <a href="https://mtgjson.com/downloads/all-files/#allprintings" target="_blank">data</a> 
-    version <code>{{ mtgjson_ver }}</code>
+    version <code>{{ mtgjson_ver }}</code>.
 </p>
